--- a/L20231024_Map.vcxproj.filters
+++ b/L20231024_Map.vcxproj.filters
@@ -26,5 +26,8 @@
     <ClCompile Include="Map.cpp">
       <Filter>Source Files\MapProject</Filter>
     </ClCompile>
+    <ClCompile Include="main2.cpp">
+      <Filter>Source Files\MapProject</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
